--- a/index.html
+++ b/index.html
@@ -20,13 +20,44 @@
                      <p class="text-gray-600 mb-6">Oyuna başlamak için kullanıcı adınızı girin:</p>
                      <input type="text" id="username-input" placeholder="Kullanıcı Adı" maxlength="20" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent mb-6 transition-all">
                      <button id="start-game-btn" class="w-full bg-indigo-600 text-white py-3 rounded-lg font-medium hover:bg-indigo-700 transform transition-all hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 disabled:opacity-50 disabled:cursor-not-allowed">Oyuna Başla</button>
+                     <div class="relative my-4">
+                        <div class="absolute inset-0 flex items-center">
+                            <div class="w-full border-t border-gray-300"></div>
+                        </div>
+                        <div class="relative flex justify-center text-sm">
+                            <span class="px-2 bg-white text-gray-500">veya</span>
+                        </div>
+                    </div>
+                    
+                    <button id="google-login-btn" 
+                            class="w-full flex items-center justify-center px-4 py-3 border border-gray-300 rounded-lg shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                        <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" 
+                             class="h-5 w-5 mr-2" alt="Google logo">
+                        Google ile Giriş Yap
+                    </button>
+                    
+                    <p class="text-xs text-gray-500 mt-4 text-center">
+                        Skorunuzu kaydetmek için Google ile giriş yapın
+                    </p>
                  </div>
              </div>
              <div id="game-screen" style="display: none;" class="bg-white rounded-2xl shadow-xl">
+               <div class="flex items-center justify-between mb-6">
+                  <div class="flex items-center">
+                      <img id="user-avatar" class="h-10 w-10 rounded-full mr-3" src="" alt="Profil resmi">
+                      <div>
+                          <p class="text-sm text-gray-500" id="user-email"></p>
+                      </div>
+                  </div>
+                  <button id="logout-btn" class="text-sm text-red-600 hover:text-red-800">
+                      Çıkış Yap
+                  </button>
+              </div>
                  <div class="grid grid-cols-1 sm:grid-cols-5 gap-4 mb-6 text-center">
                      <div class="bg-indigo-50 p-3 rounded-lg">
                          <p class="text-sm text-gray-600">Oyuncu</p>
-                         <p class="font-semibold text-indigo-900" id="player-name"></p>
+                         <p class="font-semibold text-indigo-900" id="player-name">
+                         </p>
                      </div>
                      <div class="bg-indigo-50 p-3 rounded-lg">
                          <p class="text-sm text-gray-600">Kalan Hak</p>
@@ -395,8 +426,8 @@
              <button id="play-again-btn">Tekrar Oyna</button>
           </div>
           <div id="result" class="result"></div>
-          <button id="next-btn" style="display: none;">Sonraki Soru</button>
-          <button id="restart-btn" style="display: none;">Yeniden Başla</button>
+          <button id="next-btn" class="hidden">Sonraki Soru</button>
+          <button id="restart-btn" class="hidden;">Yeniden Başla</button>
           </div>
      </div>
      <!-- Ses efektleri -->
