responsive font-size ve svg yeniden konumkandırıldı.

--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
                     </button>
                     
                     <p class="text-xs text-gray-500 mt-4 text-center">
-                        Skorunuzu kaydetmek için Google ile giriş yapın
+                        Skorunuzu kaydetmek için Google ile giriş <span style="text-decoration: underline;">yapabileceksiniz.</span>
                     </p>
                  </div>
              </div>
              <div id="game-screen" style="display: none;" class="bg-white rounded-2xl shadow-xl">
                <div class="flex items-center justify-between mb-3">
                   <div class="flex items-center">
-                      <img id="user-avatar" class="h-10 w-10 rounded-full mr-3" src="" alt="Profil resmi">
+                      <img id="user-avatar" class="h-10 w-10 rounded-full mr-3" src="" alt="Profil resmi olacak">
                       <div>
                           <p class="text-sm text-gray-500" id="user-email"></p>
                       </div>
                   </div>
                   <button id="logout-btn" class="text-sm text-red-600 hover:text-red-800">
-                      Çıkış Yap
+                      Çıkış yapabileceksiniz
                   </button>
               </div>
                  <div class="grid grid-cols-1 sm:grid-cols-5 gap-4 mb-3 text-center">
